Update distance layout

--- a/app/src/main/res/layout/game_control_overlay.xml
+++ b/app/src/main/res/layout/game_control_overlay.xml
@@ -14,13 +14,11 @@
         android:id="@+id/tv_stroke_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
         android:layout_margin="@dimen/default_parent_border_alignment"
+        android:background="@drawable/rounded_rectangle"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
-        android:shadowColor="@color/text_shadow_color"
-        android:shadowDx="@integer/text_shadow_x_delta"
-        android:shadowDy="@integer/text_shadow_y_delta"
-        android:shadowRadius="@integer/text_shadow_radius"
-        android:text="@string/app_name"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
 
@@ -28,8 +26,11 @@
         android:id="@+id/tv_distance_forward"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
         android:layout_marginTop="@dimen/default_view_spacing"
         android:layout_marginLeft="@dimen/default_parent_border_alignment"
+        android:background="@drawable/rounded_rectangle"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
         app:layout_constraintTop_toBottomOf="@id/tv_stroke_count"
         app:layout_constraintLeft_toLeftOf="parent" />
@@ -38,6 +39,8 @@
         android:id="@+id/tv_distance_backward"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
         android:layout_marginTop="@dimen/default_view_spacing"
         android:layout_marginLeft="@dimen/default_parent_border_alignment"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
